# oslash-local

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  issue-25-body.md  issue-26-body.md  issue-27-body.md  issue-28-body.md  issue-29-body.md  issue-30-body.md  issue-31-body.md  issue-32-body.md  issue-33-body.md  issue-34-body.md
cli/: README.md  pyproject.toml
cli/oslash_cli/: __init__.py  __main__.py  api.py  app.py
cli/oslash_cli/components/: __init__.py  chat_panel.py  results_list.py  search_bar.py  status_bar.py
cli/oslash_cli/styles/: __init__.py  app.tcss
docs/issues/: issue-2a-fastapi-basics.md  issue-2b-pydantic-validation.md  issue-2c-async-await.md  issue-2d-routers-structure.md  issue-2e-websockets.md
extension/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/scripts/: generate-icons.cjs  generate-icons.js
extension/src/background/: index.ts
extension/src/content/: index.ts
extension/src/lib/: types.ts
extension/src/popup/: App.tsx  index.html  index.tsx
extension/src/styles/: globals.css
server/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
server/alembic/: env.py
server/alembic/versions/: e0f7f4d879a8_initial_schema.py
server/oslash/: __init__.py  __main__.py  config.py  main.py
server/oslash/api/: __init__.py  auth.py  chat.py  search.py  sync.py  vectors.py
server/oslash/connectors/: __init__.py  base.py  gdrive.py  gmail.py  gpeople.py  hubspot.py  slack.py
server/oslash/db/: __init__.py  crud.py  models.py  session.py
server/oslash/models/: __init__.py  schemas.py
server/oslash/services/: __init__.py  chat.py  chunking.py  embeddings.py  scheduler.py  search.py
server/oslash/vector/: __init__.py  store.py
server/tests/: __init__.py
server/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
server/web/src/: App.tsx  main.tsx
server/web/src/lib/: queryParser.ts  types.ts
server/web/src/styles/: globals.css
