[project]
name = "oslash-cli"
version = "0.1.0"
description = "OSlash Local - CLI/TUI client for file search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Ankit Pansari"}
]

dependencies = [
    "textual>=0.47.1",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",
    "black>=24.1.1",
]

[project.scripts]
oslash = "oslash_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oslash_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

